--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "net": "^1.0.2"
+    "net": "^1.0.2",
+    "systeminformation": "^3.30.2"
   }
 }
